force-app/main/default/objects/Country_Specific_Default__mdt/Country_Specific_Default__mdt.object-meta.xml
<CustomObject>
    <label>Country Specific Default</label>
    <pluralLabel>Country Specific Defaults</pluralLabel>
</CustomObject>