force-app/main/default/objects/Country_Specific_Default__mdt/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>