force-app/main/default/objects/Country_Specific_Default__mdt/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <description>The Business Type where this Default applies</description>
    <inlineHelpText>The Business Type where this Default applies</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Consumer</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Reseller</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Project</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>After Sales</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>