force-app/main/default/objects/Country_Specific_Default__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>