force-app/main/default/objects/Country_Specific_Default__mdt/fields/Default_Language__c.field-meta.xml
<CustomField>
    <fullName>Default_Language__c</fullName>
    <description>The Default Language to use for documentations in a specific country</description>
    <label>Default Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>cz</fullName>
                <default>true</default>
                <label>cz</label>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>en_ca</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>fi</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>pl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>