force-app/main/default/objects/Country_Specific_Default__mdt/fields/DefaultFinancingIdentifier__c.field-meta.xml
<CustomField>
    <fullName>DefaultFinancingIdentifier__c</fullName>
    <description>Used for Consumers that choose financing as Payment -&gt; Set to Klarna 3300001</description>
    <label>Default Financing Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>