force-app/main/default/objects/Country_Specific_Default__mdt/fields/DefaultLanguage__c.field-meta.xml
<CustomField>
    <fullName>DefaultLanguage__c</fullName>
    <description>The Default Language to use for documentations in a specific country</description>
    <label>Default Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>de</fullName>
                <label>german</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>english (Default)</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>spanish</label>
            </value>
            <value>
                <fullName>fi</fullName>
                <label>finnish</label>
            </value>
            <value>
                <fullName>nb</fullName>
                <label>norwegian</label>
            </value>
            <value>
                <fullName>pl</fullName>
                <label>polish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>