force-app/main/default/objects/Country_Specific_Default__mdt/fields/DistrictType__c.field-meta.xml
<CustomField>
    <fullName>DistrictType__c</fullName>
    <description>District Type to use for Pricing, values P1-P10</description>
    <inlineHelpText>District Type to use for Pricing, default P4 &quot;Region&quot;</inlineHelpText>
    <label>District Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>