force-app/main/default/objects/Country_Specific_Default__mdt/fields/Financing_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Financing_Customer_Number__c</fullName>
    <description>Used for Consumers that choose financing as Payment -&gt; Set to Klarna 3300001</description>
    <label>Financing Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>