force-app/main/default/objects/Country_Specific_Default__mdt/fields/Quote_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiration__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Quote Expiration</label>
    <type>Checkbox</type>
</CustomField>