force-app/main/default/objects/Country_Specific_Default__mdt/fields/QuoteExpiration__c.field-meta.xml
<CustomField>
    <fullName>QuoteExpiration__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to indicate if Quotes Expire</description>
    <inlineHelpText>Flag to indicate if Quotes Expire</inlineHelpText>
    <label>Quote Expiration</label>
    <type>Checkbox</type>
</CustomField>