force-app/main/default/objects/Country_Specific_Default__mdt/fields/QuoteExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>QuoteExpirationTime__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Time in Days when Quote Quote Expires</description>
    <inlineHelpText>Time in Days when Offer Expires</inlineHelpText>
    <label>Expiration Time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>