force-app/main/default/objects/Country_Specific_Default__mdt/fields/ValueAddedTax__c.field-meta.xml
<CustomField>
    <fullName>ValueAddedTax__c</fullName>
    <inlineHelpText>The Default VAT for a Country</inlineHelpText>
    <label>Value Added Tax %</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>