force-app/main/default/objects/Country_Specific_Default__mdt/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <inlineHelpText>The Default VAT for a Country</inlineHelpText>
    <label>VAT</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>